--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
-  "framework": "nextjs",
+  "installCommand": "npm install",
   "nodeVersion": "20.x"
 }
