Add Vercel Analytics to track site performance
- Install @vercel/analytics package
- Import Analytics component in layout.tsx
- Add Analytics component to track page views and performance
- Enable analytics across entire site

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/nodemailer": "^7.0.1",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
