--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "resend": "^6.1.0",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
