--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.62.0",
     "resend": "^6.1.0",
     "stripe": "^18.3.0",
