--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.westrosemedia.com"
+        }
+      ],
+      "destination": "https://westrosemedia.com/$1",
+      "permanent": true
+    }
+  ]
 }
